--- a/views/balance.ejs
+++ b/views/balance.ejs
@@ -201,7 +201,7 @@
             }    
         });
         $.ajax({
-			url:'http://localhost:3000/transaction' ,
+			url:'http://localhost:3000/transactionList' ,
 			type : 'POST',
 			headers : {
 				'x-access-token' : jwtToken
