--- a/views/main.ejs
+++ b/views/main.ejs
@@ -302,6 +302,8 @@
 											'<a href="/balance?fin_use_num='+data.res_list[i].fintech_use_num+'">잔액조회</a>'+
 											' / ' +
 											'<a href="/qrcode?fin_use_num='+data.res_list[i].fintech_use_num+'">QR코드</a>'+
+											' / ' +
+											'<a href="/transaction?fin_use_num='+data.res_list[i].fintech_use_num+'">출금하기</a>'+
                                             '</div>'+
                                             '</div>'+
                                             '</div>'+
